--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,5 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "./start.sh"
     plan: free
+    # Forcer l'utilisation de Python 3.11 au lieu de 3.13
+    runtime: python-3.11.9
