--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  - type: worker
+  - type: web
     name: concert-alert-bot
     env: python
     buildCommand: "pip install -r requirements.txt"
