--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: concert-alert-bot
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python main.py"
+    startCommand: "bash start.sh"
     plan: free
